# chess-make-cpp

./: CMakeLists.txt  RUN_CMDS
design/: vision1.txt  vision2.txt
src/: bitboard.cpp  bitboard.h  bitset.cpp  bitset.h  file_io.cpp  file_io.h  main.cpp  matcher.cpp  matcher.h  moves.cpp  moves.h  position.cpp  position.h  relation.cpp  relation.h  test.cpp  test.h  types.h
